[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes and Scripts/Game/LeftButton.gd" type="Script" id=1]
[ext_resource path="res://Scenes and Scripts/Game/DownButton.gd" type="Script" id=2]
[ext_resource path="res://KennyMiniSquare.tres" type="FontFile" id=3]
[ext_resource path="res://Scenes and Scripts/Game/JumpButton.gd" type="Script" id=4]
[ext_resource path="res://Scenes and Scripts/Game/MasterVolS.gd" type="Script" id=5]
[ext_resource path="res://Scenes and Scripts/Game/MusicVolS.gd" type="Script" id=6]
[ext_resource path="res://Scenes and Scripts/Game/RightButton.gd" type="Script" id=7]
[ext_resource path="res://Scenes and Scripts/Game/SFXVolS.gd" type="Script" id=8]
[ext_resource path="res://Scenes and Scripts/Game/UpButton.gd" type="Script" id=9]
[ext_resource path="res://Scenes and Scripts/Game/Fullscreen.gd" type="Script" id=10]
[ext_resource path="res://EmptyUIBox.tres" type="StyleBox" id=11]
[ext_resource path="res://Theme Assets/Theme.tres" type="Theme" id=12]
[ext_resource path="res://Scenes and Scripts/Game/OptionsMenu.gd" type="Script" id=13]

[node name="OptionsMenu" type="Control"]
offset_left = 1.0
offset_top = 128.0
offset_right = 41.0
offset_bottom = 168.0
script = ExtResource( 13 )

[node name="OptionsContainer" type="VBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
offset_left = 191.0
offset_right = 447.0
offset_bottom = 132.0
theme_override_constants/separation = 0

[node name="OptionsBack" type="Button" parent="OptionsContainer"]
offset_right = 256.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../SFXVolS")
focus_neighbor_top = NodePath("../SFXVolS")
focus_neighbor_right = NodePath("../Controls")
focus_neighbor_bottom = NodePath("../Controls")
focus_next = NodePath("../Controls")
focus_previous = NodePath("../SFXVolS")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
text = "Back"

[node name="Controls" type="Button" parent="OptionsContainer"]
offset_top = 20.0
offset_right = 256.0
offset_bottom = 40.0
focus_neighbor_left = NodePath("../OptionsBack")
focus_neighbor_top = NodePath("../OptionsBack")
focus_neighbor_right = NodePath("../Fullscreen")
focus_neighbor_bottom = NodePath("../Fullscreen")
focus_next = NodePath("../Fullscreen")
focus_previous = NodePath("../OptionsBack")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
text = "Controls"

[node name="Fullscreen" type="Button" parent="OptionsContainer"]
offset_top = 40.0
offset_right = 256.0
offset_bottom = 60.0
focus_neighbor_left = NodePath("../Controls")
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_right = NodePath("../MasterVolS")
focus_neighbor_bottom = NodePath("../MasterVolS")
focus_next = NodePath("../MasterVolS")
focus_previous = NodePath("../Controls")
theme = ExtResource( 12 )
text = "Fullscreen On"
script = ExtResource( 10 )

[node name="HSeparator" type="HSeparator" parent="OptionsContainer"]
offset_top = 60.0
offset_right = 256.0
offset_bottom = 64.0
theme = ExtResource( 12 )

[node name="MasterVolL" type="Label" parent="OptionsContainer"]
offset_top = 64.0
offset_right = 256.0
offset_bottom = 84.0
theme = ExtResource( 12 )
text = "MASTER VOLUME"
align = 1

[node name="MasterVolS" type="HSlider" parent="OptionsContainer"]
offset_top = 84.0
offset_right = 256.0
offset_bottom = 100.0
focus_neighbor_left = NodePath("../Controls")
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_right = NodePath("../MusicVolS")
focus_neighbor_bottom = NodePath("../MusicVolS")
focus_next = NodePath("../MusicVolS")
focus_previous = NodePath("../Controls")
theme = ExtResource( 12 )
max_value = 1.0
step = 0.01
script = ExtResource( 5 )

[node name="MusicVolL" type="Label" parent="OptionsContainer"]
offset_top = 100.0
offset_right = 256.0
offset_bottom = 120.0
theme = ExtResource( 12 )
text = "MUSIC VOLUME"
align = 1

[node name="MusicVolS" type="HSlider" parent="OptionsContainer"]
offset_top = 120.0
offset_right = 256.0
offset_bottom = 136.0
focus_neighbor_left = NodePath("../MasterVolS")
focus_neighbor_top = NodePath("../MasterVolS")
focus_neighbor_right = NodePath("../SFXVolS")
focus_neighbor_bottom = NodePath("../SFXVolS")
focus_next = NodePath("../SFXVolS")
focus_previous = NodePath("../MasterVolS")
theme = ExtResource( 12 )
max_value = 1.0
step = 0.01
script = ExtResource( 6 )

[node name="SFXVolL" type="Label" parent="OptionsContainer"]
offset_top = 136.0
offset_right = 256.0
offset_bottom = 156.0
theme = ExtResource( 12 )
text = "SOUND EFFECTS VOLUME"
align = 1

[node name="SFXVolS" type="HSlider" parent="OptionsContainer"]
offset_top = 156.0
offset_right = 256.0
offset_bottom = 172.0
focus_neighbor_left = NodePath("../MusicVolS")
focus_neighbor_top = NodePath("../MusicVolS")
focus_neighbor_right = NodePath("../OptionsBack")
focus_neighbor_bottom = NodePath("../OptionsBack")
focus_next = NodePath("../OptionsBack")
focus_previous = NodePath("../MusicVolS")
theme = ExtResource( 12 )
max_value = 1.0
step = 0.01
script = ExtResource( 8 )

[node name="ControlsContainer" type="VBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
offset_left = 191.0
offset_right = 447.0
offset_bottom = 80.0
theme_override_constants/separation = 0

[node name="ControlsBack" type="Button" parent="ControlsContainer"]
offset_right = 256.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../JumpContainer/JumpButton")
focus_neighbor_top = NodePath("../JumpContainer/JumpButton")
focus_neighbor_right = NodePath("../UpContainer/UpButton")
focus_neighbor_bottom = NodePath("../UpContainer/UpButton")
focus_next = NodePath("../UpContainer/UpButton")
focus_previous = NodePath("../JumpContainer/JumpButton")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
text = "Back"

[node name="UpContainer" type="HBoxContainer" parent="ControlsContainer"]
offset_top = 20.0
offset_right = 256.0
offset_bottom = 40.0
alignment = 1

[node name="UpLabel" type="Label" parent="ControlsContainer/UpContainer"]
offset_left = 101.0
offset_right = 121.0
offset_bottom = 20.0
theme = ExtResource( 12 )
text = "Up"

[node name="UpButton" type="Button" parent="ControlsContainer/UpContainer"]
offset_left = 125.0
offset_right = 155.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../../ControlsBack")
focus_neighbor_top = NodePath("../../ControlsBack")
focus_neighbor_right = NodePath("../../DownContainer/DownButton")
focus_neighbor_bottom = NodePath("../../DownContainer/DownButton")
focus_next = NodePath("../../DownContainer/DownButton")
focus_previous = NodePath("../../ControlsBack")
theme = ExtResource( 12 )
toggle_mode = true
text = "Key"
script = ExtResource( 9 )

[node name="DownContainer" type="HBoxContainer" parent="ControlsContainer"]
offset_top = 40.0
offset_right = 256.0
offset_bottom = 60.0
alignment = 1

[node name="DownLabel" type="Label" parent="ControlsContainer/DownContainer"]
offset_left = 90.0
offset_right = 132.0
offset_bottom = 20.0
theme = ExtResource( 12 )
text = "Down"

[node name="DownButton" type="Button" parent="ControlsContainer/DownContainer"]
offset_left = 136.0
offset_right = 166.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../../UpContainer/UpButton")
focus_neighbor_top = NodePath("../../UpContainer/UpButton")
focus_neighbor_right = NodePath("../../LeftContainer/LeftButton")
focus_neighbor_bottom = NodePath("../../LeftContainer/LeftButton")
focus_next = NodePath("../../LeftContainer/LeftButton")
focus_previous = NodePath("../../UpContainer/UpButton")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
toggle_mode = true
text = "Key"
script = ExtResource( 2 )

[node name="LeftContainer" type="HBoxContainer" parent="ControlsContainer"]
offset_top = 60.0
offset_right = 256.0
offset_bottom = 80.0
alignment = 1

[node name="LeftLabel" type="Label" parent="ControlsContainer/LeftContainer"]
offset_left = 93.0
offset_right = 129.0
offset_bottom = 20.0
theme = ExtResource( 12 )
text = "Left"

[node name="LeftButton" type="Button" parent="ControlsContainer/LeftContainer"]
offset_left = 133.0
offset_right = 163.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../../DownContainer/DownButton")
focus_neighbor_top = NodePath("../../DownContainer/DownButton")
focus_neighbor_right = NodePath("../../RightContainer/RightButton")
focus_neighbor_bottom = NodePath("../../RightContainer/RightButton")
focus_next = NodePath("../../RightContainer/RightButton")
focus_previous = NodePath("../../DownContainer/DownButton")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
toggle_mode = true
text = "Key"
script = ExtResource( 1 )

[node name="RightContainer" type="HBoxContainer" parent="ControlsContainer"]
offset_top = 80.0
offset_right = 256.0
offset_bottom = 100.0
alignment = 1

[node name="RightLabel" type="Label" parent="ControlsContainer/RightContainer"]
offset_left = 90.0
offset_right = 132.0
offset_bottom = 20.0
theme = ExtResource( 12 )
text = "Right"

[node name="RightButton" type="Button" parent="ControlsContainer/RightContainer"]
offset_left = 136.0
offset_right = 166.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../../LeftContainer/LeftButton")
focus_neighbor_top = NodePath("../../LeftContainer/LeftButton")
focus_neighbor_right = NodePath("../../JumpContainer/JumpButton")
focus_neighbor_bottom = NodePath("../../JumpContainer/JumpButton")
focus_next = NodePath("../../JumpContainer/JumpButton")
focus_previous = NodePath("../../LeftContainer/LeftButton")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
toggle_mode = true
text = "Key"
script = ExtResource( 7 )

[node name="JumpContainer" type="HBoxContainer" parent="ControlsContainer"]
offset_top = 100.0
offset_right = 256.0
offset_bottom = 120.0
alignment = 1

[node name="JumpLabel" type="Label" parent="ControlsContainer/JumpContainer"]
offset_left = 91.0
offset_right = 131.0
offset_bottom = 20.0
theme = ExtResource( 12 )
text = "Jump"

[node name="JumpButton" type="Button" parent="ControlsContainer/JumpContainer"]
offset_left = 135.0
offset_right = 165.0
offset_bottom = 20.0
focus_neighbor_left = NodePath("../../RightContainer/RightButton")
focus_neighbor_top = NodePath("../../RightContainer/RightButton")
focus_neighbor_right = NodePath("../../ControlsBack")
focus_neighbor_bottom = NodePath("../../ControlsBack")
focus_next = NodePath("../../ControlsBack")
focus_previous = NodePath("../../RightContainer/RightButton")
theme_override_colors/font_disabled_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_focus_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 1, 0.941176, 1 )
theme_override_colors/font_pressed_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = ExtResource( 11 )
theme_override_styles/pressed = ExtResource( 11 )
theme_override_styles/focus = ExtResource( 11 )
theme_override_styles/disabled = ExtResource( 11 )
theme_override_styles/normal = ExtResource( 11 )
toggle_mode = true
text = "Key"
script = ExtResource( 4 )

[connection signal="pressed" from="OptionsContainer/OptionsBack" to="." method="_on_OptionsBack_pressed"]
[connection signal="pressed" from="OptionsContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="OptionsContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="OptionsContainer/MasterVolS" to="." method="_on_MasterVolS_value_changed"]
[connection signal="value_changed" from="OptionsContainer/MusicVolS" to="." method="_on_MusicVolS_value_changed"]
[connection signal="value_changed" from="OptionsContainer/SFXVolS" to="." method="_on_SFXVolS_value_changed"]
[connection signal="pressed" from="ControlsContainer/ControlsBack" to="." method="_on_ControlsBack_pressed"]
[connection signal="button_down" from="ControlsContainer/UpContainer/UpButton" to="." method="_on_UpButton_button_down"]
[connection signal="button_down" from="ControlsContainer/DownContainer/DownButton" to="." method="_on_DownButton_button_down"]
[connection signal="button_down" from="ControlsContainer/LeftContainer/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_down" from="ControlsContainer/RightContainer/RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_down" from="ControlsContainer/JumpContainer/JumpButton" to="." method="_on_JumpButton_button_down"]
